# werewolf

./: Cargo.toml  Makefile
api/: Cargo.toml
api/src/: lib.rs
client/: Cargo.toml  package.json  webpack.config.js
client/src/: bpp.rs  fetch.rs  lib.rs
client/src/app/: login_modal.rs  mod.rs
client/static/: index.html  style.scss
server/: Cargo.toml
server/src/: app.rs  common.rs  error.rs  json_api.rs  main.rs  server.rs  user.rs
