[package]
name = "werewolf"
version = "0.1.0"
authors = ["Meteor <bobogei81123@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2"
actix-rt = "1.0"
actix-web = "2.0"
actix-session = "0.3"
api = { path = "../api" }
anyhow = "1.0"
env_logger = "0.7"
futures = "0.3"
listenfd = "0.3"
#parking_lot = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.tokio]
version = "0.2"
features = ["sync"]
